# zskins

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/zbar/: Cargo.toml
crates/zbar/src/: bar.rs  lib.rs  main.rs  net_info.rs  popup_catcher.rs  theme.rs
crates/zbar/src/backend/: ext_workspace.rs  mod.rs  sway.rs
crates/zbar/src/modules/: battery.rs  brightness.rs  clock.rs  cpu_mem.rs  mod.rs  network.rs  network_popup.rs  settings.rs  tray.rs  tray_menu.rs  volume.rs  window_title.rs  workspaces.rs
crates/zbar/tests/: sway_parse.rs
crates/zofi/: Cargo.toml
crates/zofi-clipd/: Cargo.toml
crates/zofi-clipd/src/: daemon.rs  db.rs  ipc.rs  lib.rs  model.rs  paths.rs  pidfile.rs  preview.rs
crates/zofi/src/: assets.rs  clipd.rs  highlight.rs  input.rs  launcher.rs  main.rs  registry.rs  source.rs  theme.rs
crates/zofi/src/sources/: clipboard.rs  files.rs  icon.rs  mod.rs  union.rs  windows.rs
crates/zofi/src/sources/apps/: desktop.rs  icon.rs  mod.rs
crates/ztheme/: Cargo.toml
crates/ztheme/src/: lib.rs  watcher.rs
crates/zwindows/: Cargo.toml  README.md
crates/zwindows/examples/: capture.rs  dump.rs
crates/zwindows/src/: client.rs  lib.rs  registry.rs  screencopy.rs  sway_tree.rs  toplevel_capture.rs
crates/zwindows/src/compositor/: hyprland.rs  mod.rs  noop.rs  sway.rs
docs/superpowers/plans/: 2026-04-11-zbar-mvp.md
docs/superpowers/specs/: 2026-04-11-zbar-design.md
src/: bar.rs  main.rs  theme.rs
src/backend/: mod.rs  sway.rs
src/modules/: clock.rs  workspaces.rs
tests/: sway_wire.rs
