[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["wayland", "x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-channel = "2"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
blake3 = "1"
nix = { version = "0.29", features = ["fs", "signal", "process", "poll"] }
gtk4 = "0.9"
unicode-segmentation = "1"
rayon = "1"
walkdir = "2"
include_dir = "0.7"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = "0.4"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
