[package]
name = "zbar"
version.workspace = true
edition.workspace = true
description = "Wayland status bar built on GPUI"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
libc = "0.2"
zbus = { version = "5", default-features = false, features = ["async-io"] }
async-io = "2"
futures-lite = "2"
image = "0.25"
