[package]
name = "zbar"
# NOTE: cargo-aur (0.x) does not understand `version.workspace = true`.
# Keep these as literal values until cargo-aur gains workspace-inheritance
# support, then migrate them back to `.workspace = true`.
version = "0.1.0"
edition = "2021"
authors = ["Lee <loyalpartner@163.com>"]
license = "MIT"
repository = "https://github.com/loyalpartner/zskins"
description = "Wayland status bar and launcher built on GPUI"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
libc = "0.2"
zbus = { version = "5", default-features = false, features = ["async-io"] }
async-io = "2"
futures-lite = "2"
image = "0.25"
async-executor = "1"
icon-theme.workspace = true

[package.metadata.aur]
depends = ["wayland", "vulkan-icd-loader", "libxkbcommon", "libxcb", "fontconfig", "freetype2", "mesa", "gtk4"]
optdepends = [
    "sway: workspace and window management integration",
    "hyprland: workspace integration",
    "pipewire-pulse: volume control via pactl",
]
files = [
    # Sibling workspace binary. The release workflow pre-builds zofi
    # and copies it into this crate's dir so cargo-aur can find it.
    ["zofi", "/usr/bin/zofi"],
]
