[package]
name = "zofi"
version.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
anyhow.workspace = true
zofi-clipd = { path = "../zofi-clipd" }
nix.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-segmentation.workspace = true
rayon.workspace = true
walkdir.workspace = true
async-channel.workspace = true
include_dir.workspace = true
syntect.workspace = true
two-face.workspace = true
once_cell.workspace = true
