[package]
name = "zwindows"
version.workspace = true
edition.workspace = true
description = "Client wrapper for wlr-foreign-toplevel-management-unstable-v1 (list and control opened windows)"

[dependencies]
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true
async-channel.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "dump"
path = "examples/dump.rs"
